🏗️ Refatoração SOLID e CLEAN: transforma portfólio em aplicação modular - Implementa princípios SOLID (SRP, OCP, LSP, ISP, DIP) - Cria arquitetura modular com separação de responsabilidades - Adiciona sistema de configuração centralizada - Implementa utilitários DOM reutilizáveis - Cria módulos especializados (Animation, Contact) - Adiciona orquestrador principal (PortfolioApp) - Implementa sistema de build automatizado - Move documentação para pasta docs/ - Adiciona documentação completa da refatoração

--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
     </footer>
 
     <!-- JavaScript -->
-    <script src="assets/js/main.js"></script>
+    <script type="module" src="src/main.js"></script>
     
     <!-- Google Analytics (opcional) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=GA_MEASUREMENT_ID"></script>
