--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <img src="assets/images/profile-photo.jpg" alt="Rodrigo Santili" class="profile-photo">
             
             <h1>Rodrigo Santili Sgarioni</h1>
-            <p class="subtitle">Data Platform Manager | Data Engineering Leader | DataOps Specialist</p>
+            <p class="subtitle">Data Platform Manager | Data Engineering Leader | DataOps Specialist | Data Architect</p>
             
             <div class="contact-info">
                 <a href="mailto:rssgarioni@gmail.com" class="contact-item">
@@ -74,7 +74,7 @@
             <div class="grid">
                 <div class="card">
                     <h3>🎯 Perfil Executivo</h3>
-                    <p>Executivo de Dados com <strong>mais de 15 anos de experiência</strong> liderando a construção e evolução de plataformas analíticas, governança de dados e times técnicos de alta performance.</p>
+                    <p>Executivo de Dados com <strong>mais de 16 anos de experiência</strong> liderando a construção e evolução de plataformas analíticas, governança de dados e times técnicos de alta performance.</p>
                     <p>Combino <strong>sólida base técnica</strong> com <strong>visão estratégica</strong>, atuando na interface entre tecnologia e negócios para promover soluções escaláveis, seguras e orientadas a valor.</p>
                 </div>
                 <div class="card">
@@ -83,9 +83,9 @@
                         <li><strong>Data Platform Management</strong> - Liderança de plataformas de dados</li>
                         <li><strong>Data Engineering</strong> - Arquitetura e desenvolvimento de pipelines</li>
                         <li><strong>DataOps</strong> - Automação e governança de dados</li>
-                        <li><strong>Arquiteturas Modernas</strong> - Snowflake e Databricks</li>
+                        <li><strong>Arquiteturas Modernas</strong> - Snowflake, Databricks e Data Mesh</li>
                         <li><strong>Cloud Architecture</strong> - AWS, GCP, Azure</li>
-                        <li><strong>Team Leadership</strong> - Gestão de times técnicos (5-15 pessoas)</li>
+                        <li><strong>Team Leadership</strong> - Gestão de times técnicos (5-12 pessoas)</li>
                     </ul>
                 </div>
             </div>
@@ -99,19 +99,19 @@
             </h2>
             <div class="stats-container">
                 <div class="stat-card">
-                    <div class="stat-number" data-target="15">0</div>
+                    <div class="stat-number" data-target="16">0</div>
                     <div class="stat-label">Anos de Experiência</div>
                 </div>
                 <div class="stat-card">
-                    <div class="stat-number" data-target="8">0</div>
+                    <div class="stat-number" data-target="7">0</div>
                     <div class="stat-label">Empresas Atendidas</div>
                 </div>
                 <div class="stat-card">
-                    <div class="stat-number" data-target="15">0</div>
+                    <div class="stat-number" data-target="12">0</div>
                     <div class="stat-label">Pessoas Lideradas</div>
                 </div>
                 <div class="stat-card">
-                    <div class="stat-number" data-target="25">0</div>
+                    <div class="stat-number" data-target="30">0</div>
                     <div class="stat-label">Projetos Concluídos</div>
                 </div>
             </div>
@@ -155,6 +155,7 @@
                         <li><strong>Liderou a modernização</strong> da plataforma de dados com migração para cloud (AWS), definindo arquitetura escalável, segura e resiliente</li>
                         <li><strong>Estabeleceu diretrizes</strong> de governança de dados, promovendo padronização de pipelines, catálogo de dados e definição de políticas de qualidade e compliance</li>
                         <li><strong>Coordenou o alinhamento</strong> estratégico entre áreas técnicas e executivas (C-level), assegurando aderência das iniciativas de dados aos objetivos corporativos</li>
+                        <li><strong>Implementou soluções</strong> de Data Lake e Data Warehouse modernos com Snowflake e AWS</li>
                     </ul>
                 </div>
             </div>
@@ -246,7 +247,7 @@
                 <div class="card">
                     <h3><i class="fas fa-user-tie"></i> Gestão de Times Técnicos</h3>
                     <ul>
-                        <li>Liderança de equipes multidisciplinares (5-15 pessoas)</li>
+                        <li>Liderança de equipes multidisciplinares (15 pessoas)</li>
                         <li>Desenvolvimento de talentos e mentoria técnica</li>
                         <li>Cultura de inovação e aprendizado contínuo</li>
                         <li>Gestão de performance e feedback</li>
@@ -338,6 +339,7 @@
                     <ul class="skill-list">
                         <li><span class="badge badge-danger">Data Lake</span></li>
                         <li><span class="badge badge-danger">Data Warehouse</span></li>
+                        <li><span class="badge badge-danger">Data Mesh</span></li>
                         <li><span class="badge badge-danger">Microservices</span></li>
                         <li><span class="badge badge-danger">Event-Driven</span></li>
                     </ul>
@@ -363,6 +365,7 @@
                             <li><strong>Migração</strong> de ambiente on-premise para AWS</li>
                             <li><strong>Implementação</strong> de governança de dados</li>
                             <li><strong>Redução de 40%</strong> nos custos de infraestrutura</li>
+                            <li><strong>Implementação</strong> de Data Lake e Data Warehouse com Snowflake</li>
                         </ul>
                         <div class="project-tech">
                             <span class="badge badge-primary">AWS</span>
@@ -381,9 +384,10 @@
                         </p>
                         <ul>
                             <li><strong>Implementação</strong> de Confluent (Kafka) para streaming</li>
-                            <li><strong>Arquitetura</strong> de eventos distribuídos</li>
+                            <li><strong>Arquitetura</strong> de eventos distribuídos e Data Mesh</li>
                             <li><strong>Automação</strong> de pipelines ETL/ELT</li>
                             <li><strong>Monitoramento</strong> em tempo real</li>
+                            <li><strong>Desenvolvimento</strong> de soluções de Data Mesh para clientes de grande porte</li>
                         </ul>
                         <div class="project-tech">
                             <span class="badge badge-success">Apache Kafka</span>
@@ -438,7 +442,8 @@
                     </div>
                     <div>
                         <h4>📚 Pós Graduação em Machine Learning Engineering</h4>
-                        <p><strong>Status:</strong> Em andamento</p>
+                        <p><strong>Instituição:</strong> FIAP</p>
+                        <p><strong>Período:</strong> 2025</p>
                     </div>
                 </div>
                 <div class="card">
