Adicionados 5 novos projetos destacados: FinOps Databricks/AWS, Analytics de Clientes, Mascaramento de Dados AWS, dbt-perf CLI, DataShare AWS Redshift - Atualizado contador de projetos para 35

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="grid">
                 <div class="card">
                     <h3>🎯 Perfil Executivo</h3>
-                    <p>Executivo de Dados com <strong>mais de 16 anos de experiência</strong> liderando a construção e evolução de plataformas analíticas, governança de dados e times técnicos de alta performance.</p>
+                    <p>Executivo de Dados com <strong>mais de 20 anos de experiência</strong> liderando a construção e evolução de plataformas analíticas, governança de dados e times técnicos de alta performance.</p>
                     <p>Combino <strong>sólida base técnica</strong> com <strong>visão estratégica</strong>, atuando na interface entre tecnologia e negócios para promover soluções escaláveis, seguras e orientadas a valor.</p>
                 </div>
                 <div class="card">
@@ -111,7 +111,7 @@
                     <div class="stat-label">Pessoas Lideradas</div>
                 </div>
                 <div class="stat-card">
-                    <div class="stat-number" data-target="30">0</div>
+                    <div class="stat-number" data-target="35">0</div>
                     <div class="stat-label">Projetos Concluídos</div>
                 </div>
             </div>
@@ -299,12 +299,10 @@
                     </ul>
                 </div>
                 <div class="skill-category">
-                    <h4><i class="fas fa-database"></i> Data Platforms</h4>
+                    <h4><i class="fas fa-database"></i> Modern Data Platforms</h4>
                     <ul class="skill-list">
                         <li><span class="badge badge-success">Snowflake</span></li>
                         <li><span class="badge badge-success">Databricks</span></li>
-                        <li><span class="badge badge-success">Apache Kafka</span></li>
-                        <li><span class="badge badge-success">Confluent</span></li>
                     </ul>
                 </div>
                 <div class="skill-category">
@@ -313,7 +311,7 @@
                         <li><span class="badge badge-warning">Apache Airflow</span></li>
                         <li><span class="badge badge-warning">dbt</span></li>
                         <li><span class="badge badge-warning">Talend</span></li>
-                        <li><span class="badge badge-warning">Informatica</span></li>
+                        <li><span class="badge badge-warning">Confluent Kafka</span></li>
                     </ul>
                 </div>
                 <div class="skill-category">
@@ -321,7 +319,6 @@
                     <ul class="skill-list">
                         <li><span class="badge badge-info">Power BI</span></li>
                         <li><span class="badge badge-info">Tableau</span></li>
-                        <li><span class="badge badge-info">Looker</span></li>
                         <li><span class="badge badge-info">Apache Superset</span></li>
                     </ul>
                 </div>
@@ -330,7 +327,8 @@
                     <ul class="skill-list">
                         <li><span class="badge badge-secondary">Python</span></li>
                         <li><span class="badge badge-secondary">SQL</span></li>
-                        <li><span class="badge badge-secondary">Java</span></li>
+                        <li><span class="badge badge-secondary">PL/SQL</span></li>
+                        <li><span class="badge badge-secondary">Transact-SQL</span></li>
                         <li><span class="badge badge-secondary">JavaScript</span></li>
                     </ul>
                 </div>
@@ -415,6 +413,116 @@
                             <span class="badge badge-success">Snowflake</span>
                             <span class="badge badge-info">Tableau</span>
                             <span class="badge badge-secondary">Python</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project-card" data-category="finops">
+                    <div class="project-content">
+                        <h3 class="project-title">💰 Projeto de FinOps - Databricks e AWS</h3>
+                        <p class="project-description">
+                            <strong>Resultado:</strong> Otimização de custos e governança financeira em cloud
+                        </p>
+                        <ul>
+                            <li><strong>Implementação</strong> de estratégias de FinOps para Databricks</li>
+                            <li><strong>Otimização</strong> de custos em AWS com monitoramento avançado</li>
+                            <li><strong>Governança</strong> financeira e alocação de custos por projeto</li>
+                            <li><strong>Automação</strong> de relatórios de custos e alertas</li>
+                            <li><strong>Redução significativa</strong> nos gastos com infraestrutura cloud</li>
+                        </ul>
+                        <div class="project-tech">
+                            <span class="badge badge-success">Databricks</span>
+                            <span class="badge badge-primary">AWS</span>
+                            <span class="badge badge-warning">dbt</span>
+                            <span class="badge badge-secondary">Python</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project-card" data-category="analytics">
+                    <div class="project-content">
+                        <h3 class="project-title">📊 Projeto de Analytics de Clientes</h3>
+                        <p class="project-description">
+                            <strong>Resultado:</strong> Insights estratégicos para tomada de decisão baseada em dados
+                        </p>
+                        <ul>
+                            <li><strong>Desenvolvimento</strong> de modelos de segmentação de clientes</li>
+                            <li><strong>Implementação</strong> de dashboards executivos avançados</li>
+                            <li><strong>Análise</strong> de comportamento e jornada do cliente</li>
+                            <li><strong>Automação</strong> de relatórios e alertas preditivos</li>
+                            <li><strong>Integração</strong> com sistemas CRM e ERP</li>
+                        </ul>
+                        <div class="project-tech">
+                            <span class="badge badge-success">Snowflake</span>
+                            <span class="badge badge-warning">dbt</span>
+                            <span class="badge badge-info">Power BI</span>
+                            <span class="badge badge-secondary">SQL</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project-card" data-category="security">
+                    <div class="project-content">
+                        <h3 class="project-title">🔒 Projeto de Mascaramento e Desmascaramento de Dados - AWS</h3>
+                        <p class="project-description">
+                            <strong>Resultado:</strong> Solução robusta de segurança e privacidade de dados
+                        </p>
+                        <ul>
+                            <li><strong>Implementação</strong> de estratégias de data masking em AWS</li>
+                            <li><strong>Desenvolvimento</strong> de algoritmos de desmascaramento seletivo</li>
+                            <li><strong>Integração</strong> com políticas de compliance (LGPD, GDPR)</li>
+                            <li><strong>Automação</strong> de processos de proteção de dados sensíveis</li>
+                            <li><strong>Monitoramento</strong> e auditoria de acesso a dados</li>
+                        </ul>
+                        <div class="project-tech">
+                            <span class="badge badge-primary">AWS</span>
+                            <span class="badge badge-success">Snowflake</span>
+                            <span class="badge badge-secondary">Python</span>
+                            <span class="badge badge-danger">Security</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project-card" data-category="performance">
+                    <div class="project-content">
+                        <h3 class="project-title">⚡ dbt-perf - CLI para Performance e Tuning</h3>
+                        <p class="project-description">
+                            <strong>Resultado:</strong> Ferramenta de otimização para desenvolvimento DBT com AWS Redshift
+                        </p>
+                        <ul>
+                            <li><strong>Desenvolvimento</strong> de CLI para análise de performance DBT</li>
+                            <li><strong>Implementação</strong> de boas práticas de desenvolvimento</li>
+                            <li><strong>Otimização</strong> de queries e modelos no AWS Redshift</li>
+                            <li><strong>Automação</strong> de testes de performance</li>
+                            <li><strong>Documentação</strong> e guidelines para equipes de desenvolvimento</li>
+                        </ul>
+                        <div class="project-tech">
+                            <span class="badge badge-warning">dbt</span>
+                            <span class="badge badge-primary">AWS Redshift</span>
+                            <span class="badge badge-secondary">Python</span>
+                            <span class="badge badge-secondary">CLI</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project-card" data-category="distribution">
+                    <div class="project-content">
+                        <h3 class="project-title">🔄 Distribuição de Carga - AWS Redshift DataShare</h3>
+                        <p class="project-description">
+                            <strong>Resultado:</strong> Otimização de performance e distribuição eficiente de dados
+                        </p>
+                        <ul>
+                            <li><strong>Implementação</strong> de técnicas de DataShare no AWS Redshift</li>
+                            <li><strong>Otimização</strong> de distribuição de carga entre clusters</li>
+                            <li><strong>Desenvolvimento</strong> de estratégias de particionamento</li>
+                            <li><strong>Monitoramento</strong> de performance e throughput</li>
+                            <li><strong>Automação</strong> de balanceamento de carga</li>
+                        </ul>
+                        <div class="project-tech">
+                            <span class="badge badge-primary">AWS Redshift</span>
+                            <span class="badge badge-success">DataShare</span>
+                            <span class="badge badge-secondary">SQL</span>
+                            <span class="badge badge-secondary">PL/SQL</span>
                         </div>
                     </div>
                 </div>
