Atualização completa das certificações: Adicionadas 6 novas certificações Snowflake, Google Cloud AI/ML, e certificações existentes - Total de 10 certificações profissionais - Adicionada seção AI & Machine Learning nas habilidades técnicas

--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                     <h4><i class="fas fa-cloud"></i> Cloud Platforms</h4>
                     <ul class="skill-list">
                         <li><span class="badge badge-primary">AWS</span></li>
-                        <li><span class="badge badge-primary">GCP</span></li>
+                        <li><span class="badge badge-primary">Google Cloud</span></li>
                         <li><span class="badge badge-primary">Azure</span></li>
                     </ul>
                 </div>
@@ -340,6 +340,14 @@
                         <li><span class="badge badge-danger">Data Mesh</span></li>
                         <li><span class="badge badge-danger">Microservices</span></li>
                         <li><span class="badge badge-danger">Event-Driven</span></li>
+                    </ul>
+                </div>
+                <div class="skill-category">
+                    <h4><i class="fas fa-brain"></i> AI & Machine Learning Engineering</h4>
+                    <ul class="skill-list">
+                        <li><span class="badge badge-info">Google Cloud AI/ML</span></li>
+                        <li><span class="badge badge-info">Machine Learning</span></li>
+                        <li><span class="badge badge-info">Data Science</span></li>
                     </ul>
                 </div>
             </div>
@@ -549,7 +557,7 @@
                         <p><strong>Período:</strong> 2012</p>
                     </div>
                     <div>
-                        <h4>📚 Pós Graduação em Machine Learning Engineering</h4>
+                        <h4>🎓 Pós Graduação em Machine Learning Engineering</h4>
                         <p><strong>Instituição:</strong> FIAP</p>
                         <p><strong>Período:</strong> 2025</p>
                     </div>
@@ -557,7 +565,27 @@
                 <div class="card">
                     <h3><i class="fas fa-certificate"></i> Certificações</h3>
                     <div style="margin-bottom: 15px;">
-                        <h4>✅ Snowflake for Architects</h4>
+                        <h4>✅ Introduction to AI and Machine Learning on Google Cloud</h4>
+                        <p><strong>Emissor:</strong> Google</p>
+                    </div>
+                    <div style="margin-bottom: 15px;">
+                        <h4>✅ Snowflake Sales Professional Accreditation</h4>
+                        <p><strong>Emissor:</strong> Snowflake</p>
+                    </div>
+                    <div style="margin-bottom: 15px;">
+                        <h4>✅ Hands On Essentials - Data Lake</h4>
+                        <p><strong>Emissor:</strong> Snowflake</p>
+                    </div>
+                    <div style="margin-bottom: 15px;">
+                        <h4>✅ Hands On Essentials - Data Applications</h4>
+                        <p><strong>Emissor:</strong> Snowflake</p>
+                    </div>
+                    <div style="margin-bottom: 15px;">
+                        <h4>✅ Hands On Essentials - Data Sharing</h4>
+                        <p><strong>Emissor:</strong> Snowflake</p>
+                    </div>
+                    <div style="margin-bottom: 15px;">
+                        <h4>✅ Hands On Essentials - Data Warehouse</h4>
                         <p><strong>Emissor:</strong> Snowflake</p>
                     </div>
                     <div style="margin-bottom: 15px;">
@@ -565,16 +593,8 @@
                         <p><strong>Emissor:</strong> Databricks</p>
                     </div>
                     <div style="margin-bottom: 15px;">
-                        <h4>✅ Confluent Fundamentals & Developer</h4>
+                        <h4>✅ Confluent Fundamentals</h4>
                         <p><strong>Emissor:</strong> Confluent</p>
-                    </div>
-                    <div style="margin-bottom: 15px;">
-                        <h4>✅ Data Governance by Design</h4>
-                        <p><strong>Emissor:</strong> DAMA / LinkedIn Learning</p>
-                    </div>
-                    <div>
-                        <h4>✅ AWS Data Analytics Fundamentals</h4>
-                        <p><strong>Emissor:</strong> AWS</p>
                     </div>
                 </div>
             </div>
@@ -597,6 +617,12 @@
                     <p><strong>Nível:</strong> Intermediário</p>
                     <p><strong>Proficiência:</strong> ⭐⭐⭐○○</p>
                     <p><strong>Detalhes:</strong> Leitura técnica e comunicação funcional</p>
+                </div>
+                <div class="card">
+                    <h3>🇪🇸 Espanhol</h3>
+                    <p><strong>Nível:</strong> Básico</p>
+                    <p><strong>Proficiência:</strong> ⭐○○○○</p>
+                    <p><strong>Detalhes:</strong> Leitura técnica e comunicação básica</p>
                 </div>
             </div>
         </section>
