--- a/index.html
+++ b/index.html
@@ -360,10 +360,78 @@
                 Projetos Destacados
             </h2>
             <div class="grid">
+                <div class="project-card" data-category="modernization">
+                    <div class="project-content">
+                        <h3 class="project-title">Modernização de Plataforma de Dados</h3>
+                        <p class="project-description">
+                            <strong>Cliente:</strong> Centauro
+                            <strong>Resultado:</strong> Migração completa para cloud com 40% de redução de custos
+                        </p>
+                        <ul>
+                            <li><strong>Liderança técnica</strong> de equipe de 8 pessoas</li>
+                            <li><strong>Migração</strong> de ambiente on-premise para AWS</li>
+                            <li><strong>Implementação</strong> de governança de dados</li>
+                            <li><strong>Redução de 40%</strong> nos custos de infraestrutura</li>
+                            <li><strong>Implementação</strong> de Data Lake e Data Warehouse com Snowflake</li>
+                        </ul>
+                        <div class="project-tech">
+                            <span class="badge badge-primary">AWS</span>
+                            <span class="badge badge-success">Snowflake</span>
+                            <span class="badge badge-warning">Apache Airflow</span>
+                            <span class="badge badge-info">Power BI</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project-card" data-category="realtime">
+                    <div class="project-content">
+                        <h3 class="project-title">Arquitetura de Eventos em Tempo Real</h3>
+                        <p class="project-description">
+                            <strong>Cliente:</strong> Centauro
+                            <strong>Resultado:</strong> Redução de 60% no tempo de processamento de dados
+                        </p>
+                        <ul>
+                            <li><strong>Implementação</strong> de Confluent (Kafka) para streaming</li>
+                            <li><strong>Arquitetura</strong> de eventos distribuídos e Data Mesh</li>
+                            <li><strong>Automação</strong> de pipelines ETL/ELT</li>
+                            <li><strong>Monitoramento</strong> em tempo real</li>
+                            <li><strong>Desenvolvimento</strong> de soluções de Data Mesh para clientes de grande porte</li>
+                        </ul>
+                        <div class="project-tech">
+                            <span class="badge badge-success">Apache Kafka</span>
+                            <span class="badge badge-success">Confluent</span>
+                            <span class="badge badge-success">Databricks</span>
+                            <span class="badge badge-warning">dbt</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project-card" data-category="omnichannel">
+                    <div class="project-content">
+                        <h3 class="project-title">Jornada Omnichannel</h3>
+                        <p class="project-description">
+                            <strong>Cliente:</strong> Centauro
+                            <strong>Resultado:</strong> Integração completa entre canais físicos e digitais
+                        </p>
+                        <ul>
+                            <li><strong>Data Lake</strong> corporativo unificado</li>
+                            <li><strong>Pipelines</strong> de dados em tempo real</li>
+                            <li><strong>Dashboards</strong> executivos integrados</li>
+                            <li><strong>Governança</strong> de dados centralizada</li>
+                        </ul>
+                        <div class="project-tech">
+                            <span class="badge badge-primary">AWS</span>
+                            <span class="badge badge-success">Snowflake</span>
+                            <span class="badge badge-info">Tableau</span>
+                            <span class="badge badge-secondary">Python</span>
+                        </div>
+                    </div>
+                </div>
                 <div class="project-card" data-category="security">
                     <div class="project-content">
                         <h3 class="project-title">Projeto de Mascaramento e Desmascaramento de Dados - AWS</h3>
                         <p class="project-description">
+                            <strong>Cliente:</strong> SolFacil
                             <strong>Resultado:</strong> Solução robusta de segurança e privacidade de dados
                         </p>
                         <ul>
@@ -384,8 +452,9 @@
 
                 <div class="project-card" data-category="performance">
                     <div class="project-content">
-                        <h3 class="project-title">dbt-perf - CLI para Performance e Tuning</h3>
+                        <h3 class="project-title">CLI para Performance e Tuning "dbt-perf"</h3>
                         <p class="project-description">
+                            <strong>Cliente:</strong> SolFacil
                             <strong>Resultado:</strong> Ferramenta de otimização para desenvolvimento DBT com AWS Redshift
                         </p>
                         <ul>
@@ -408,6 +477,7 @@
                     <div class="project-content">
                         <h3 class="project-title">Distribuição de Carga - AWS Redshift DataShare</h3>
                         <p class="project-description">
+                            <strong>Cliente:</strong> SolFacil
                             <strong>Resultado:</strong> Otimização de performance e distribuição eficiente de dados
                         </p>
                         <ul>
@@ -425,75 +495,12 @@
                         </div>
                     </div>
                 </div>
-                <div class="project-card" data-category="modernization">
-                    <div class="project-content">
-                        <h3 class="project-title">Modernização de Plataforma de Dados - GRUPO SBF</h3>
-                        <p class="project-description">
-                            <strong>Resultado:</strong> Migração completa para cloud com 40% de redução de custos
-                        </p>
-                        <ul>
-                            <li><strong>Liderança técnica</strong> de equipe de 8 pessoas</li>
-                            <li><strong>Migração</strong> de ambiente on-premise para AWS</li>
-                            <li><strong>Implementação</strong> de governança de dados</li>
-                            <li><strong>Redução de 40%</strong> nos custos de infraestrutura</li>
-                            <li><strong>Implementação</strong> de Data Lake e Data Warehouse com Snowflake</li>
-                        </ul>
-                        <div class="project-tech">
-                            <span class="badge badge-primary">AWS</span>
-                            <span class="badge badge-success">Snowflake</span>
-                            <span class="badge badge-warning">Apache Airflow</span>
-                            <span class="badge badge-info">Power BI</span>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="project-card" data-category="realtime">
-                    <div class="project-content">
-                        <h3 class="project-title">Arquitetura de Eventos em Tempo Real - V8.TECH</h3>
-                        <p class="project-description">
-                            <strong>Resultado:</strong> Redução de 60% no tempo de processamento de dados
-                        </p>
-                        <ul>
-                            <li><strong>Implementação</strong> de Confluent (Kafka) para streaming</li>
-                            <li><strong>Arquitetura</strong> de eventos distribuídos e Data Mesh</li>
-                            <li><strong>Automação</strong> de pipelines ETL/ELT</li>
-                            <li><strong>Monitoramento</strong> em tempo real</li>
-                            <li><strong>Desenvolvimento</strong> de soluções de Data Mesh para clientes de grande porte</li>
-                        </ul>
-                        <div class="project-tech">
-                            <span class="badge badge-success">Apache Kafka</span>
-                            <span class="badge badge-success">Confluent</span>
-                            <span class="badge badge-success">Databricks</span>
-                            <span class="badge badge-warning">dbt</span>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="project-card" data-category="omnichannel">
-                    <div class="project-content">
-                        <h3 class="project-title">Jornada Omnichannel - CENTAURO</h3>
-                        <p class="project-description">
-                            <strong>Resultado:</strong> Integração completa entre canais físicos e digitais
-                        </p>
-                        <ul>
-                            <li><strong>Data Lake</strong> corporativo unificado</li>
-                            <li><strong>Pipelines</strong> de dados em tempo real</li>
-                            <li><strong>Dashboards</strong> executivos integrados</li>
-                            <li><strong>Governança</strong> de dados centralizada</li>
-                        </ul>
-                        <div class="project-tech">
-                            <span class="badge badge-primary">AWS</span>
-                            <span class="badge badge-success">Snowflake</span>
-                            <span class="badge badge-info">Tableau</span>
-                            <span class="badge badge-secondary">Python</span>
-                        </div>
-                    </div>
-                </div>
 
                 <div class="project-card" data-category="finops">
                     <div class="project-content">
                         <h3 class="project-title">Projeto de FinOps - Databricks e AWS</h3>
                         <p class="project-description">
+                            <strong>Cliente:</strong> Mills
                             <strong>Resultado:</strong> Otimização de custos e governança financeira em cloud
                         </p>
                         <ul>
@@ -516,6 +523,7 @@
                     <div class="project-content">
                         <h3 class="project-title">Projeto de Analytics de Clientes</h3>
                         <p class="project-description">
+                            <strong>Cliente:</strong> Mills
                             <strong>Resultado:</strong> Insights estratégicos para tomada de decisão baseada em dados
                         </p>
                         <ul>
