Atualiza a descrição do projeto "Modernização de Plataforma de Dados" no portfólio, adicionando uma quebra de linha após o nome do cliente para melhor formatação.

--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
                     <div class="project-content">
                         <h3 class="project-title">Modernização de Plataforma de Dados</h3>
                         <p class="project-description">
-                            <strong>Cliente:</strong> Centauro
+                            <strong>Cliente:</strong> Centauro<br>
                             <strong>Resultado:</strong> Migração completa para cloud com 40% de redução de custos
                         </p>
                         <ul>
@@ -387,7 +387,7 @@
                     <div class="project-content">
                         <h3 class="project-title">Arquitetura de Eventos em Tempo Real</h3>
                         <p class="project-description">
-                            <strong>Cliente:</strong> Centauro
+                            <strong>Cliente:</strong> Centauro<br>
                             <strong>Resultado:</strong> Redução de 60% no tempo de processamento de dados
                         </p>
                         <ul>
@@ -410,7 +410,7 @@
                     <div class="project-content">
                         <h3 class="project-title">Jornada Omnichannel</h3>
                         <p class="project-description">
-                            <strong>Cliente:</strong> Centauro
+                            <strong>Cliente:</strong> Centauro<br>
                             <strong>Resultado:</strong> Integração completa entre canais físicos e digitais
                         </p>
                         <ul>
@@ -431,7 +431,7 @@
                     <div class="project-content">
                         <h3 class="project-title">Projeto de Mascaramento e Desmascaramento de Dados - AWS</h3>
                         <p class="project-description">
-                            <strong>Cliente:</strong> SolFacil
+                            <strong>Cliente:</strong> SolFacil<br>
                             <strong>Resultado:</strong> Solução robusta de segurança e privacidade de dados
                         </p>
                         <ul>
@@ -454,7 +454,7 @@
                     <div class="project-content">
                         <h3 class="project-title">CLI para Performance e Tuning "dbt-perf"</h3>
                         <p class="project-description">
-                            <strong>Cliente:</strong> SolFacil
+                            <strong>Cliente:</strong> SolFacil<br>
                             <strong>Resultado:</strong> Ferramenta de otimização para desenvolvimento DBT com AWS Redshift
                         </p>
                         <ul>
@@ -477,7 +477,7 @@
                     <div class="project-content">
                         <h3 class="project-title">Distribuição de Carga - AWS Redshift DataShare</h3>
                         <p class="project-description">
-                            <strong>Cliente:</strong> SolFacil
+                            <strong>Cliente:</strong> SolFacil<br>
                             <strong>Resultado:</strong> Otimização de performance e distribuição eficiente de dados
                         </p>
                         <ul>
@@ -500,7 +500,7 @@
                     <div class="project-content">
                         <h3 class="project-title">Projeto de FinOps - Databricks e AWS</h3>
                         <p class="project-description">
-                            <strong>Cliente:</strong> Mills
+                            <strong>Cliente:</strong> Mills<br>
                             <strong>Resultado:</strong> Otimização de custos e governança financeira em cloud
                         </p>
                         <ul>
@@ -523,7 +523,7 @@
                     <div class="project-content">
                         <h3 class="project-title">Projeto de Analytics de Clientes</h3>
                         <p class="project-description">
-                            <strong>Cliente:</strong> Mills
+                            <strong>Cliente:</strong> Mills<br>
                             <strong>Resultado:</strong> Insights estratégicos para tomada de decisão baseada em dados
                         </p>
                         <ul>
