--- a/index.html
+++ b/index.html
@@ -364,11 +364,10 @@
                     <div class="project-content">
                         <h3 class="project-title">Modernização de Plataforma de Dados</h3>
                         <p class="project-description">
-                            <strong>Cliente:</strong> Centauro<br>
-                            <br>
-                            <strong>Resultado:</strong> Migração completa para cloud com 40% de redução de custos
                         </p>
                         <ul>
+                            <li><strong>Cliente:</strong> Centauro<br></li>
+                            <li><strong>Resultado:</strong> Migração completa para cloud com 40% de redução de custos</li>
                             <li><strong>Liderança técnica</strong> de equipe de 8 pessoas</li>
                             <li><strong>Migração</strong> de ambiente on-premise para AWS</li>
                             <li><strong>Implementação</strong> de governança de dados</li>
@@ -388,11 +387,10 @@
                     <div class="project-content">
                         <h3 class="project-title">Arquitetura de Eventos em Tempo Real</h3>
                         <p class="project-description">
-                            <strong>Cliente:</strong> Centauro<br>
-                            <br>
-                            <strong>Resultado:</strong> Redução de 60% no tempo de processamento de dados
                         </p>
                         <ul>
+                            <li><strong>Cliente:</strong> Centauro<br></li>
+                            <li><strong>Resultado:</strong> Redução de 60% no tempo de processamento de dados</li>
                             <li><strong>Implementação</strong> de Confluent (Kafka) para streaming</li>
                             <li><strong>Arquitetura</strong> de eventos distribuídos e Data Mesh</li>
                             <li><strong>Automação</strong> de pipelines ETL/ELT</li>
@@ -412,11 +410,10 @@
                     <div class="project-content">
                         <h3 class="project-title">Jornada Omnichannel</h3>
                         <p class="project-description">
-                            <strong>Cliente:</strong> Centauro<br>
-                            <br>
-                            <strong>Resultado:</strong> Integração completa entre canais físicos e digitais
                         </p>
                         <ul>
+                            <li><strong>Cliente:</strong> Centauro<br></li>
+                            <li><strong>Resultado:</strong> Integração completa entre canais físicos e digitais</li>
                             <li><strong>Data Lake</strong> corporativo unificado</li>
                             <li><strong>Pipelines</strong> de dados em tempo real</li>
                             <li><strong>Dashboards</strong> executivos integrados</li>
@@ -434,11 +431,10 @@
                     <div class="project-content">
                         <h3 class="project-title">Projeto de Mascaramento e Desmascaramento de Dados - AWS</h3>
                         <p class="project-description">
-                            <strong>Cliente:</strong> SolFacil<br>
-                            <br>
-                            <strong>Resultado:</strong> Solução robusta de segurança e privacidade de dados
                         </p>
                         <ul>
+                            <li><strong>Cliente:</strong> SolFacil<br></li>
+                            <li><strong>Resultado:</strong> Solução robusta de segurança e privacidade de dados</li>
                             <li><strong>Implementação</strong> de estratégias de data masking em AWS</li>
                             <li><strong>Desenvolvimento</strong> de algoritmos de desmascaramento seletivo</li>
                             <li><strong>Integração</strong> com políticas de compliance (LGPD, GDPR)</li>
@@ -458,11 +454,10 @@
                     <div class="project-content">
                         <h3 class="project-title">CLI para Performance e Tuning "dbt-perf"</h3>
                         <p class="project-description">
-                            <strong>Cliente:</strong> SolFacil<br>
-                            <br>
-                            <strong>Resultado:</strong> Ferramenta de otimização para desenvolvimento DBT com AWS Redshift
                         </p>
                         <ul>
+                            <li><strong>Cliente:</strong> SolFacil<br></li>
+                            <li><strong>Resultado:</strong> Ferramenta de otimização para desenvolvimento DBT com AWS Redshift</li>
                             <li><strong>Desenvolvimento</strong> de CLI para análise de performance DBT</li>
                             <li><strong>Implementação</strong> de boas práticas de desenvolvimento</li>
                             <li><strong>Otimização</strong> de queries e modelos no AWS Redshift</li>
@@ -482,11 +477,10 @@
                     <div class="project-content">
                         <h3 class="project-title">Distribuição de Carga - AWS Redshift DataShare</h3>
                         <p class="project-description">
-                            <strong>Cliente:</strong> SolFacil<br>
-                            <br>
-                            <strong>Resultado:</strong> Otimização de performance e distribuição eficiente de dados
                         </p>
                         <ul>
+                            <li><strong>Cliente:</strong> SolFacil<br></li>
+                            <li><strong>Resultado:</strong> Otimização de performance e distribuição eficiente de dados</li>
                             <li><strong>Implementação</strong> de técnicas de DataShare no AWS Redshift</li>
                             <li><strong>Otimização</strong> de distribuição de carga entre clusters</li>
                             <li><strong>Desenvolvimento</strong> de estratégias de particionamento</li>
@@ -506,11 +500,10 @@
                     <div class="project-content">
                         <h3 class="project-title">Projeto de FinOps - Databricks e AWS</h3>
                         <p class="project-description">
-                            <strong>Cliente:</strong> Mills<br>
-                            <br>
-                            <strong>Resultado:</strong> Otimização de custos e governança financeira em cloud
                         </p>
                         <ul>
+                            <li><strong>Cliente:</strong> Mills<br></li>
+                            <li><strong>Resultado:</strong> Otimização de custos e governança financeira em cloud</li>
                             <li><strong>Implementação</strong> de estratégias de FinOps para Databricks</li>
                             <li><strong>Otimização</strong> de custos em AWS com monitoramento avançado</li>
                             <li><strong>Governança</strong> financeira e alocação de custos por projeto</li>
@@ -530,11 +523,10 @@
                     <div class="project-content">
                         <h3 class="project-title">Projeto de Analytics de Clientes</h3>
                         <p class="project-description">
-                            <strong>Cliente:</strong> Mills<br>
-                            <br>
-                            <strong>Resultado:</strong> Insights estratégicos para tomada de decisão baseada em dados
                         </p>
                         <ul>
+                            <li><strong>Cliente:</strong> Mills<br></li>
+                            <li><strong>Resultado:</strong> Insights estratégicos para tomada de decisão baseada em dados</li>
                             <li><strong>Desenvolvimento</strong> de modelos de segmentação de clientes</li>
                             <li><strong>Implementação</strong> de dashboards executivos avançados</li>
                             <li><strong>Análise</strong> de comportamento e jornada do cliente</li>
