Adiciona uma linha horizontal entre as informações do cliente e o resultado no portfólio para melhorar a separação visual e a legibilidade.

--- a/index.html
+++ b/index.html
@@ -367,6 +367,7 @@
                         </p>
                         <ul>
                             <li><strong>Cliente:</strong> Centauro<br></li>
+                            <hr style="border: none; border-top: 1px solid #676262; margin: 10px 0;">
                             <li><strong>Resultado:</strong> Migração completa para cloud com 40% de redução de custos</li>
                             <li><strong>Liderança técnica</strong> de equipe de 8 pessoas</li>
                             <li><strong>Migração</strong> de ambiente on-premise para AWS</li>
